Install of the application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 
 [dependencies]
 sysinfo = "0.30.5"
+
+
+[[bin]]
+name = "sys-info"
+path = "src/main.rs"
+
+[[bin]]
+name = "install"
+path = "install/src/main.rs"
